[project]
name = "startship"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "twn39", email = "twn39@163.com" }
]
dependencies = [
    "gradio>=4.38.1",
    "langchain>=0.2.7",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "langchain-openai>=0.1.16",
    "dashscope>=1.20.1",
    "setuptools==69.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app.py"]

